kustomize/overlays/test/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cannabis-deployment
  labels:
    app: cannabis-test
spec:
  selector:
    matchLabels:
      app: cannabis-test
  template:
    metadata:
      labels:
        app: cannabis-test
    spec:
      containers:
        - name: cannabis-backend
          imagePullPolicy: Always
          startupProbe:
            httpGet:
              path: /health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: cannabis-test.dbca.wa.gov.au
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: cannabis-test.dbca.wa.gov.au
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: cannabis-test.dbca.wa.gov.au
            periodSeconds: 30
            failureThreshold: 3
          envFrom:
            - secretRef:
                name: cannabis-env-test
          volumeMounts:
            - name: prince2-license-test
              mountPath: /usr/lib/prince/license
              readOnly: true
        - name: cannabis-frontend
          imagePullPolicy: Always
      volumes:
        - name: prince2-license-test
          configMap:
            defaultMode: 420
            name: prince2-license-test
